# SubReels

./: Dockerfile  HAUV.lua  README.md  docker-compose.yml  lights_and_recordtest.lua  relaytest.lua  simpleswitch.lua
.github/workflows/: deploy.yml
app/: main.py  pyproject.toml
app/static/: app.js  index.html  register_service
